appId: ${APP_ID}
---
- clearState
- launchApp
- assertVisible: sonaro
- assertVisible: "Let's Get Started "
- tapOn: "Let's Get Started "
- assertVisible: Sign In
